Adjusted footer title and logo size. Changed alignment from the footer bar so it aligns correctly at the center on all screens

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ input {
 .footerFlair {
   background: url("assets/Waves/FooterCurve.svg") no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 90vh;
 }
 
 .footer {
@@ -66,7 +66,7 @@ input {
   align-items: center;
   justify-content: center;
   margin-top: 10vh;
-  height: 100vh;
+  height: 91vh;
   width: 100%;
 }
 
